# mysite

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
api/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_body.py  0003_post_author_alter_post_pub_date.py  0004_alter_post_pub_date.py  0005_vote.py  0006_delete_vote.py  0007_like_dislike_comment.py  0008_delete_comment.py  0009_remove_like_users_post_dislikes_post_likes_and_more.py  0010_rename_dislikes_post_down_vote_and_more.py  0011_rename_post_id_vote_post_rename_user_id_vote_user.py  0012_remove_vote_down_vote_remove_vote_up_vote_vote_up.py  0013_alter_vote_unique_together.py  0014_remove_post_down_vote_remove_post_up_vote.py  0015_tag_post_tag.py
migrations/: 0001_initial.py
mysite/: settings.py  urls.py
mysite_new_env/: pyvenv.cfg
overrides/: admin.py  apps.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
static/polls/: style.css
templates/: base.html
templates/blog/: create_post.html  create_tag.html  detail.html  detail_tag.html  index.html  index_tag.html
templates/django_registration/: registration_complete.html  registration_form.html
templates/polls/: detail.html  index.html
templates/static/polls/: style.css
